--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    text-align: center;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .mainContainer  {
+    width: 100%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .Table
+  {
+    margin: auto;
+    width: 100%;
   }
-}
+  
+  .MaterialTable:nth-child(even){
+    background-color:red;
+    }
+  
+  .MaterialTable:nth-child(odd){
+    background-color:black;
+    }
+  
+    
+    .Line {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  
+    .oneLine {
+      height: auto;
+      margin-right: 8px;
+    }
+    .up{
+      padding-top: 20px;
+    }
+  
+    .up + div{
+        margin-right: 80px;
+    }
+
