--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
+html,body{
+  height: 100%;
+}
+
 .App {
     text-align: center;
-  }
+    height: 100%;
+}
   .mainContainer  {
     width: 100%;
   }
@@ -19,6 +24,12 @@
     background-color:black;
     }
   
+    .switch label input[type=checkbox]:checked+.lever:after {
+      background-color: #303F9F !important;
+  }
+  .switch label input[type=checkbox]:checked+.lever {
+      background-color: #303F9F !important;
+  }
     
     .Line {
       display: flex;
